--- a/formValidation/form-validation-js/main.css
+++ b/formValidation/form-validation-js/main.css
@@ -14,3 +14,11 @@
   border-radius: 2px;
   cursor: pointer;
 }
+
+input:invalid {
+  border: 2px dashed red;
+}
+
+input:valid {
+  border: 2px solid balck;
+}
